		implemented. Currently I am unsure if the testing requires further
		cases, since the methods being tested are relatively simple.

	v1.0 - 04/11/2014

		The Message interface, implementation and unit testing are all deemed
		ready to go and have had some tidying up to finalise this version.
		Updated VERSIONHISTORY.txt
		
================================================================================

Version 1:	Single Threaded Client/Server

Commenced:	04/11/2014
Finished:	10/11/2014

--------------------------------------------------------------------------------

	v1.1 - 04/11/2014
	
		Created the Client and Server classes, however so far their content has
		not been implemented yet. Instead, the initial Javadoc has been created
		The current plan is to examine the previous version of my solution, and
		then analyse how it can be improved, before moving forward with the 
		project.

	v1.2 - 06/11/2014

		Implemented the Server class, adding it's functionality. In terms of
		breaking up the previous class' main method into smaller pieces, little
		was achieved since I felt that after removing some print statements used
		for checking, the code was small enough to not require further breaking 
		down. This will be reassessed during multithreading part of the
		exercise.
		
	v1.3 - 08/11/2014
	
		Implemented the Client class, and now the system is capable of
		communicating between the client and server. Basic testing has shown me
		than this is working, but I will be doing some more thorough testing
		in the future as well, since this is still merely the single threaded
		version.
		
	v1.4 - 10/11/2014
	
		Generated Javadoc for the project, although since Client and Server are
		primarily private methods, they have not been included, although this is
		not a major issue. I have tweaked Client and Server to have fields that
		make some sense, mainly being the client input and the created message
		object.