@@ -11,7 +11,7 @@ import java.io.*;
  * @since 1.1
  *
  */
-public class Server {
+public class Server{
 			
 	/** Message to be sent from server to client. */
 	private Message message;
@@ -40,12 +40,14 @@ public class Server {
 			while(true){
 				Socket client = socket.accept(); // Connection found.
 				
+				// To Me
 				// Obtaining the string from client.
 				InputStreamReader isr;
 				isr = new InputStreamReader(client.getInputStream());
 				BufferedReader br = new BufferedReader(isr);
 				line = br.readLine();
 				
+				// To you
 				// Creating and sending a Message object.
 				message = new MessageImpl(line);
 				ObjectOutputStream output;
@@ -58,7 +60,7 @@ public class Server {
 		}
 		
 	}
-	
+
 	/**
 	 * The main method of this class will start the server side execution
 	 * of the program.
@@ -68,5 +70,4 @@ public class Server {
 	public static void main(String[] args){
 		Server server = new Server();
 	}
-
 }
